<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/space_smallest"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="com.tirdis.watchorread.CategoryActivity">

 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:id="@+id/layout_section_header_category" >
     <com.tirdis.watchorread.view.OpenSansTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/font_size_large"
         android:text="@string/category_back"
         android:textColor="@android:color/holo_red_dark"
         android:clickable="true"
         android:onClick="onBackBtnClick"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/margin_small"

         />
     <com.tirdis.watchorread.view.OpenSansTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/font_size_large"
         android:text="@string/category_save"
         android:layout_alignParentRight="true"
         android:textColor="@android:color/holo_red_dark"
         android:clickable="true"
         android:onClick="onDoneBtnClick"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/margin_small"
         />

         <com.tirdis.watchorread.view.OpenSansTextView
             android:id="@+id/textView_setting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/font_size_title_action_bar"
             android:text="@string/setting"
             android:orientation="horizontal"
             android:textColor="@android:color/white"
             android:layout_centerInParent="true"/>
         <ImageView
             android:id="@+id/imageView_help"
             android:layout_width="@dimen/size_help_icon"
             android:layout_height="@dimen/size_help_icon"
             android:layout_toRightOf="@id/textView_setting"
             android:background="@drawable/icon_help"
             android:onClick="onHelpBtnClick"
             android:clickable="true"
             android:layout_centerInParent="true"
             android:layout_marginLeft="@dimen/margin_normal"/>

     </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_extra_large"
        android:layout_below="@id/layout_section_header_category"
        android:id = "@+id/layout_section_list_category"
        android:orientation="horizontal"
        android:background="@color/color_header_category"
        android:weightSum="1"

        android:gravity="center_vertical">
        <Space android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"></Space>
        <com.tirdis.watchorread.view.OpenSansTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_normal"
            android:text="@string/category_name"
            android:textColor="@android:color/black"
            android:paddingLeft="@dimen/margin_small"
            android:layout_weight="0.35"
            android:textStyle="bold"
            />
        <com.tirdis.watchorread.view.OpenSansTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_normal"
            android:text="@string/category_default"
            android:textColor="@android:color/black"
            android:layout_weight="0.2"
            android:gravity="right"
            android:textStyle="bold"
            />
        <com.tirdis.watchorread.view.OpenSansTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_normal"
            android:text="@string/category_interest"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_weight="0.25"
            />


   </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_below="@id/layout_section_list_category"
        android:id = "@+id/listView_category"
        android:divider="#00000000"
        >

    </ListView>
</RelativeLayout>
