<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/space_smallest"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="com.tirdis.watchorread.CategoryActivity">
    <!--<com.pnikosis.materialishprogress.ProgressWheel-->
        <!--android:id="@+id/progress_wheel"-->
        <!--android:layout_width="80dp"-->
        <!--android:layout_height="80dp"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:visibility="gone"-->
        <!--wheel:matProg_barColor="#5588FF"-->
        <!--wheel:matProg_progressIndeterminate="true"-->
     <!--/>-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/layout_section_header_category" >
        <com.tirdis.watchorread.view.OpenSansTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_large"
            android:text="@string/category_back"
            android:textColor="@android:color/holo_red_dark"
            android:clickable="true"
            android:onClick="onBackBtnClick"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_small"
            />
        <com.tirdis.watchorread.view.OpenSansTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_large"
            android:text="@string/category_pick"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/holo_red_dark"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:onClick="onDoneBtnClick"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_small"
            />
        <com.tirdis.watchorread.view.OpenSansTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_date_action_bar"
            android:text="@string/archives"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    <!--<com.squareup.timessquare.CalendarPickerView-->
        <!--android:id="@+id/view_calendar"-->
        <!--android:layout_below="@+id/layout_section_header_category"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->

        <!--/>-->
    <!--<com.prolificinteractive.materialcalendarview.MaterialCalendarView-->
        <!--android:id="@+id/view_calendar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--app:mcv_showOtherDates="boolean"-->
        <!--app:mcv_arrowColor="color"-->
        <!--app:mcv_selectionColor="color"-->
        <!--app:mcv_headerTextAppearance="style"-->
        <!--app:mcv_dateTextAppearance="style"-->
        <!--app:mcv_weekDayTextAppearance="style"-->
        <!--app:mcv_weekDayLabels="array"-->
        <!--app:mcv_monthLabels="array"-->
        <!--app:mcv_tileSize="dimension"-->
        <!--app:mcv_firstDayOfWeek="enum"-->
        <!--app:mcv_leftArrowMask="drawable"-->
        <!--app:mcv_rightArrowMask="drawable"-->
        <!--/>-->


    <LinearLayout
        android:id="@+id/calendar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_section_header_category"
        android:orientation="vertical" >
    </LinearLayout>

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/progress2"
        android:layout_centerInParent="true"
        android:id="@+id/progressBar1"
        android:visibility="invisible"
        />

</RelativeLayout>
